# Jamii-Routines

./: .gitignore  LICENSE  README.md
jamii-routines/: README.md  index.html  package.json  pnpm-lock.yaml
jamii-routines-program/: Cargo.toml
jamii-routines-program/src/: lib.rs
jamii-routines/src/: App.tsx  index.css  main.tsx
jamii-routines/src/components/: ActionButton.tsx  DashboardHeader.tsx  Loader.tsx  header.tsx  href.tsx  logo.tsx
jamii-routines/src/views/: About.tsx  AuthCode.tsx  Home.tsx  Login.tsx  Logout.tsx  SignUp.tsx  index.tsx
jamii-routines/src/views/Dashboard/: ConnectPasskeyOp.tsx  PasskeyOp.tsx  RegisterPasskeyOp.tsx  root.tsx
routines-client/: Cargo.toml
routines-client/src/: main.rs
routines-client/src/rpc/: airdrop.rs  blockhash.rs  mod.rs  req_resp.rs  version.rs
routines-passkey/: Cargo.toml  README.md
routines-passkey/src/: challenge.rs  lib.rs  ops.rs
server/: Cargo.toml
server/src/: app_routes.rs  errors.rs  main.rs  parse_secrets.rs
server/src/auth/: cookie_auth.rs  email_service.rs  mod.rs  passkey_auth.rs
server/src/handlers/: auth_code_mailer.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_auth_code.rs
server/src/handlers/dashboard/: handler.rs
server/src/storage/: store.rs
