[package]
name = "routines-client"
version = "0.1.0"
edition = "2024"

[dependencies]
base64ct = { version = "1.8.3", features = ["std"] }
bs58 = "0.5.1"
jzon = "0.12.5"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
solana-address = "2.6.1"
solana-hash = { version = "4.5.0", features = ["wincode"] }
solana-instruction = { version = "3.4.0", features = ["wincode"] }
solana-keypair = "3.1.2"
solana-sdk-ids = "3.1.0"
solana-transaction = { version = "4.1.5", features = ["wincode"] }
tokio = { version = "1.52.3", features = ["full"] }
wincode = "0.5.5"
