[package]
name    = "routines-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum  = {version = "0.8.9", features = ["ws", "http2"]}
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "time"] }
thiserror = "2.0.18"
tokio = {version = "1.52.3", features = ["full"]}
tower-http = { version = "0.7.0", features = ["cors"] }
