[package]
name    = "routines-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.9", features = ["ws", "http2", "macros"]}
axum-extra = {version = "0.12.6", features = ["cookie"]}
faster-hex = {version = "0.10.0", default-features = false, features = ["std"]}
mail-list = "0.2.1-alpha"
random-detached = {version = "1.0.1", features = ["chars"]}
serde = {version = "1.0.228", features = ["derive"]}
sqlx = {version = "0.9.0", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "time",
]}
tai64 = { version = "4.1.0", features = ["serde"] }
thiserror = "2.0.18"
time = "0.3.53"
tokio = {version = "1.52.3", features = ["full"]}
toml = "1.1.2"
tower-http = { version = "0.7.0", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
routines-passkey = {path = "../routines-passkey"}
serde_json = "1.0.150"
base64ct = { version = "1.8.3", features = ["std"] }
bs58 = "0.5.1"
